# skeleton-tracker

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
skeleton_tracker/: __init__.py  app.py  app_clientside.py  camera.py  tracker.py  video_feed.py
skeleton_tracker/templates/: index.html
static/: index.html
tests/: __init__.py  test_tracker.py
